[tool.poetry]
name = "tf-sha256"
version = "0.1.0"
description = "Compute SHA256 with TensorFlow"
authors = ["JasonYZ <yurenzhang2017@gmail.com>"]
readme = "README.md"
packages = [{include = "tf_sha256"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "2.16.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
